--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "lite-server": "lite-server",
-    "webpack": "webpack --watch",
-    "build": "webpack"
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
